# M365-Auth

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.py  get-token  get_token.py  m365auth.py  pyproject.toml  refresh-token  requirements.txt
