[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_system"

[project]
name = "m365auth"
version = "0.1.0"
description = "OAuth2 authentication for Microsoft 365 services (IMAP/SMTP/Calendar/etc)"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "msal",
    "platformdirs",
    "cryptography",
    "keyring",
]

[project.scripts]
get-token = "m365auth:main_get_token"
refresh-token = "m365auth:main_refresh_token"
get-refresh-token = "m365auth:main_get_refresh_token"
